--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+
+    <meta property="og:title" content="Tenzies Game - React + TypeScript" />
+    <meta property="og:description" content="A fun dice game built with React and refactored using TypeScript." />
+    <meta property="og:image" content="https://tenzies-game-dlg.netlify.app/og-image.png" />
+    <meta property="og:url" content="https://tenzies-game-dlg.netlify.app/" />
+    <meta property="og:type" content="website" />
+    
     <title>typescript-practice</title>
   </head>
   <body>
